slock aop 使用抽象类